nouveau titre et css modifé pour le p

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Un super titre</h1>
+    <h1>Un terrible titre</h1>
+    <p>un beau paragraphe</p>
   </body>
 </html>
